@@ -27,10 +27,7 @@ import eu.europa.ec.edelivery.smp.data.model.user.DBDomainMember;
 import eu.europa.ec.edelivery.smp.data.model.user.DBUser;
 import eu.europa.ec.edelivery.smp.data.ui.*;
 import eu.europa.ec.edelivery.smp.data.ui.auth.SMPRole;
-import eu.europa.ec.edelivery.smp.exceptions.BadRequestException;
-import eu.europa.ec.edelivery.smp.exceptions.ErrorBusinessCode;
-import eu.europa.ec.edelivery.smp.exceptions.ErrorCode;
-import eu.europa.ec.edelivery.smp.exceptions.SMPRuntimeException;
+import eu.europa.ec.edelivery.smp.exceptions.*;
 import eu.europa.ec.edelivery.smp.logging.SMPLogger;
 import eu.europa.ec.edelivery.smp.logging.SMPLoggerFactory;
 import eu.europa.ec.edelivery.smp.utils.SessionSecurityUtils;
@@ -110,7 +107,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         ServiceResult<DomainPublicRO> result = new ServiceResult<>();
         result.setPage(page);
         result.setPageSize(pageSize);
-        Long count = domainDao.getAllDomainsForUserCount(user);
+        long count = domainDao.getAllDomainsForUserCount(user);
         if (count < 1) {
             result.setCount(0L);
             return result;
@@ -118,7 +115,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         result.setCount(count);
         List<DomainPublicRO> refList = domainDao.getAllDomainsForUser(user, page, pageSize).stream()
                 .map(doc -> conversionService.convert(doc, DomainPublicRO.class))
-                .collect(Collectors.toList());
+                .toList();
         result.getServiceEntities().addAll(refList);
         return result;
     }
@@ -157,7 +154,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         }
         result.setCount(count);
         List<DBDomainMember> memberROS = domainMemberDao.getDomainMembers(domainId, page, pageSize, filter);
-        List<MemberRO> memberList = memberROS.stream().map(member -> conversionService.convert(member, MemberRO.class)).collect(Collectors.toList());
+        List<MemberRO> memberList = memberROS.stream().map(member -> conversionService.convert(member, MemberRO.class)).toList();
 
         result.getServiceEntities().addAll(memberList);
         return result;
@@ -167,7 +164,8 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
     public MemberRO addMemberToDomain(Long domainId, MemberRO memberRO, Long memberId) {
         LOG.info("Add member [{}] to domain [{}]", memberRO.getUsername(), domainId);
         DBUser user = userDao.findUserByUsername(memberRO.getUsername())
-                .orElseThrow(() -> new SMPRuntimeException(ErrorCode.INVALID_REQUEST, "Add/edit membership", "User [" + memberRO.getUsername() + "] does not exists!"));
+                .orElseThrow(() -> new SMPRuntimeException(ErrorMessageType.INVALID_REQUEST_DOMAIN_MEMBERSHIP_ADD_USER_NOT_EXISTS)
+                        .addParam(ErrorMessageArgument.USERNAME, memberRO.getUsername()));
 
         DBDomainMember domainMember;
         if (memberId != null) {
@@ -176,7 +174,8 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         } else {
             DBDomain domain = domainDao.find(domainId);
             if (domainMemberDao.isUserDomainMember(user, domain)) {
-                throw new SMPRuntimeException(ErrorCode.INVALID_REQUEST, "Add membership", "User [" + memberRO.getUsername() + "] is already a member!");
+                throw new SMPRuntimeException(ErrorMessageType.INVALID_REQUEST_DOMAIN_MEMBERSHIP_ADD_USER_ALREADY_MEMBER)
+                        .addParam(ErrorMessageArgument.USERNAME, memberRO.getUsername());
             }
             domainMember = domainMemberDao.addMemberToDomain(domain, user, memberRO.getRoleType());
         }
@@ -188,10 +187,10 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         LOG.info("Delete member [{}] from domain [{}]", memberId, domainId);
         DBDomainMember domainMember = domainMemberDao.find(memberId);
         if (domainMember == null) {
-            throw new SMPRuntimeException(ErrorCode.INVALID_REQUEST, "Membership", "Membership does not exists!");
+            throw new SMPRuntimeException(ErrorMessageType.INVALID_REQUEST_DOMAIN_MEMBERSHIP_REMOVE_USER_NOT_MEMBER);
         }
         if (!Objects.equals(domainMember.getDomain().getId(), domainId)) {
-            throw new SMPRuntimeException(ErrorCode.INVALID_REQUEST, "Membership", "Membership does not belong to domain!");
+            throw new SMPRuntimeException(ErrorMessageType.INVALID_REQUEST_DOMAIN_MEMBERSHIP_REMOVE_USER_NOT_PART_OF_DOMAIN);
         }
 
         domainMemberDao.remove(domainMember);
@@ -203,7 +202,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
         DBDomain domain = domainDao.find(domainId);
         if (domain == null) {
             LOG.warn("Can not get domain for ID [{}], because it does not exists!", domainId);
-            throw new BadRequestException(ErrorBusinessCode.NOT_FOUND, DOMAIN_DOES_NOT_EXIST_IN_DATABASE);
+            throw new BadRequestException(ErrorMessageType.DOMAIN_NOT_EXISTS_ID);
         }
 
         //filter and validate resources to be removed
@@ -221,7 +220,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
     public List<DomainPropertyRO> getDomainEditProperties(Long domainId) {
         DBDomain domain = domainDao.find(domainId);
         if (domain == null) {
-            throw new BadRequestException(ErrorBusinessCode.NOT_FOUND, DOMAIN_DOES_NOT_EXIST_IN_DATABASE);
+            throw new BadRequestException(ErrorMessageType.DOMAIN_NOT_EXISTS_ID);
         }
         return domainConfigurationDao.getDomainPropertiesForRole(domain, SMPRole.USER).stream()
                 .map(property -> conversionService.convert(property, DomainPropertyRO.class))
@@ -239,7 +238,7 @@ public class UIDomainEditService extends UIServiceBase<DBDomain, DomainPublicRO>
     public List<DomainPropertyRO> updateDomainEditProperties(Long domainId, List<DomainPropertyRO> domainProperties) {
         DBDomain domain = domainDao.find(domainId);
         if (domain == null) {
-            throw new BadRequestException(ErrorBusinessCode.NOT_FOUND, DOMAIN_DOES_NOT_EXIST_IN_DATABASE);
+            throw new BadRequestException(ErrorMessageType.DOMAIN_NOT_EXISTS_ID);
         }
         return domainConfigurationDao.updateDomainPropertiesForRole(domain, domainProperties, SMPRole.USER).stream()
                 .map(property -> conversionService.convert(property, DomainPropertyRO.class))
